--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "4.0.1",
     "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.0.1",
+    "@capacitor/core": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
@@ -19,12 +20,19 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.2",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.4.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -65,7 +73,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.0.1"
+    "@capacitor/cli": "^4.0.1"
   },
   "description": "An Ionic project"
 }
